# just-shell

./: Cargo.toml  LICENSE  README.md  justfile  readme.org
src/: main.rs
