[package]
name = "just-shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
ctrlc = "3.4.2"
fuzzy-matcher = "0.3.7"
rustyline = { version = "13.0.0", features = ["derive"] }
termion = "3.0.0"
